# SnowfakePython

./: CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
bindings/python/: SnowfakePython.cpp
cmake/: HeaderFromSPIRV.cmake  ShaderHeader.cmake
docs/: index.md  reference.md
examples/: snowflake1.py  snowflake2.py  snowflake3.py  snowflake4.py  snowflake5.py  snowflake6.py  snowflake7.py  snowflake8.py  snowflake9.py
src/: Medium.hpp  SeedCrystal.hpp  Simulation.cpp  Simulation.hpp  SimulationParameters.h  SimulationState.h  StepSimulation.h  VulkanComputeHelper.h  aux_vulkan.cpp  aux_vulkan.h  compute.cpp  compute.h  constants.h  solver_defaults.h
src/renderer/: BufferData.h  FrameData.h  GraphicsPipeline.h  ImageData.h  Memory.h  PersistentGUI.cpp  PersistentGUI.h  SwapchainData.h  VolumeBuffers.h  gui.cpp  gui.h
src/shaders/: sample_occupancy.comp  slines.frag  slines.vert  solver_substep.comp  svolume.frag  svolume.vert
